--- a/3dbox.html
+++ b/3dbox.html
@@ -40,6 +40,7 @@
             })
 
             console.log(getCookie("box_flag"));
+            console.log(document.cookie);
             if (getCookie("box_flag") == null) {
                 setCookie("box_flag", "true", "h1");
                 // 引导操作
@@ -144,14 +145,18 @@
         }
 
         // 读取cookie
-        function getCookie(name) {
-            let arr, reg = new RegExp("(^| )" + name + "=([^;]*)(;|$)");
+        function getCookie(cookieName) {
+            const strCookie = document.cookie;
+            const cookieList = strCookie.split(';');
 
-            if (arr === document.cookie.match(reg)) {
-                return unescape(arr[2]);
-            } else {
-                return null;
+            for (let i = 0; i < cookieList.length; i++) {
+                const arr = cookieList[i].split('=');
+                if (cookieName === arr[0].trim()) {
+                    return arr[1];
+                }
             }
+
+            return null;
         }
     </script>
 
