--- a/index.html
+++ b/index.html
@@ -80,14 +80,18 @@
         }
 
         // 读取cookie
-        function getCookie(name) {
-            let arr, reg = new RegExp("(^| )" + name + "=([^;]*)(;|$)");
+        function getCookie(cookieName) {
+            const strCookie = document.cookie;
+            const cookieList = strCookie.split(';');
 
-            if (arr === document.cookie.match(reg)) {
-                return unescape(arr[2]);
-            } else {
-                return null;
+            for (let i = 0; i < cookieList.length; i++) {
+                const arr = cookieList[i].split('=');
+                if (cookieName === arr[0].trim()) {
+                    return arr[1];
+                }
             }
+
+            return null;
         }
     </script>
 </head>
