--- a/video.html
+++ b/video.html
@@ -81,7 +81,7 @@
     <h3 class="tit mb-3">更多推广</h3>
     <div class="textBox">
         <div class="user">
-            <img src="./images/logo.png" alt="">
+            <img src="./images/logo1.png" alt="">
         </div>
         <div class="text ">
             <p>我是广告，我是广告，我是广告，我是广告，我是广告，我是广告，我是广告，我是广告，我是广告，我是广告。</p>
@@ -89,7 +89,7 @@
     </div>
     <div class="textBox">
         <div class="user">
-            <img src="./images/logo.png" alt="">
+            <img src="./images/logo1.png" alt="">
         </div>
         <div class="text ">
             <p>我是广告，我是广告，我是广告，我是广告，我是广告，我是广告，我是广告，我是广告，我是广告，我是广告。</p>
@@ -97,7 +97,7 @@
     </div>
     <div class="textBox">
         <div class="user">
-            <img src="./images/logo.png" alt="">
+            <img src="./images/logo1.png" alt="">
         </div>
         <div class="text ">
             <p>我是广告，我是广告，我是广告，我是广告，我是广告，我是广告，我是广告，我是广告，我是广告，我是广告。</p>
@@ -105,7 +105,7 @@
     </div>
     <div class="textBox">
         <div class="user">
-            <img src="./images/logo.png" alt="">
+            <img src="./images/logo1.png" alt="">
         </div>
         <div class="text ">
             <p>我是广告，我是广告，我是广告，我是广告，我是广告，我是广告，我是广告，我是广告，我是广告，我是广告。</p>
@@ -113,7 +113,7 @@
     </div>
     <div class="textBox">
         <div class="user">
-            <img src="./images/logo.png" alt="">
+            <img src="./images/logo1.png" alt="">
         </div>
         <div class="text ">
             <p>我是广告，我是广告，我是广告，我是广告，我是广告，我是广告，我是广告，我是广告，我是广告，我是广告。</p>
