--- a/index.html
+++ b/index.html
@@ -237,6 +237,83 @@
                 gesture-handler="minScale: 0.25; maxScale: 10">
         </a-image>
     </a-marker>
+
+    <a-marker type="pattern" url="pattern-maker/pattern-10.patt">
+        <a-image
+                src="#a1"
+                height="1.5"
+                width="1.5"
+                rotation="-90 0 0"
+                class="clickable"
+                gesture-handler="minScale: 0.25; maxScale: 10">
+        </a-image>
+    </a-marker>
+
+    <a-marker type="pattern" url="pattern-maker/pattern-11.patt">
+        <a-image
+                src="#a2"
+                height="1.5"
+                width="1.5"
+                rotation="-90 0 0"
+                class="clickable"
+                gesture-handler="minScale: 0.25; maxScale: 10">
+        </a-image>
+    </a-marker>
+
+    <a-marker type="pattern" url="pattern-maker/pattern-12.patt">
+        <a-image
+                src="#a3"
+                height="1.5"
+                width="1.5"
+                rotation="-90 0 0"
+                class="clickable"
+                gesture-handler="minScale: 0.25; maxScale: 10">
+        </a-image>
+    </a-marker>
+
+    <a-marker type="pattern" url="pattern-maker/pattern-13.patt">
+        <a-image
+                src="#a4"
+                height="1.5"
+                width="1.5"
+                rotation="-90 0 0"
+                class="clickable"
+                gesture-handler="minScale: 0.25; maxScale: 10">
+        </a-image>
+    </a-marker>
+
+    <a-marker type="pattern" url="pattern-maker/pattern-14.patt">
+        <a-image
+                src="#a5"
+                height="1.5"
+                width="1.5"
+                rotation="-90 0 0"
+                class="clickable"
+                gesture-handler="minScale: 0.25; maxScale: 10">
+        </a-image>
+    </a-marker>
+
+    <a-marker type="pattern" url="pattern-maker/pattern-15.patt">
+        <a-image
+                src="#a4"
+                height="1.5"
+                width="1.5"
+                rotation="-90 0 0"
+                class="clickable"
+                gesture-handler="minScale: 0.25; maxScale: 10">
+        </a-image>
+    </a-marker>
+
+    <a-marker type="pattern" url="pattern-maker/pattern-16.patt">
+        <a-image
+                src="#a3"
+                height="1.5"
+                width="1.5"
+                rotation="-90 0 0"
+                class="clickable"
+                gesture-handler="minScale: 0.25; maxScale: 10">
+        </a-image>
+    </a-marker>
     <a-entity camera></a-entity>
 </a-scene>
 
