删除无用文件

--- a/3dbox.html
+++ b/3dbox.html
@@ -35,27 +35,27 @@
                 }
             })
 
-            window.addEventListener("popstate", function (e) {
-                backClick();
-            })
-
-            console.log(getCookie("box_flag"));
-            console.log(document.cookie);
-            if (getCookie("box_flag") == null) {
-                setCookie("box_flag", "true", "h1");
-                // 引导操作
-                const driver = new Driver({
-                    padding: 100,    // Distance of element from around the edges 高亮与高亮节点的间距大小
-                    closeBtnText: '我知道了', // Text on the close button for this step 关闭按钮的文字
-                })
-                driver.highlight({
-                    element: '#slide_sec1',
-                    popover: {
-                        title: '点击查看包装详细信息',
-                        position: 'bottom-right',
-                    }
-                });
-            }
+            // window.addEventListener("popstate", function (e) {
+            //     backClick();
+            // })
+            //
+            // console.log(getCookie("box_flag"));
+            // console.log(document.cookie);
+            // if (getCookie("box_flag") == null) {
+            //     setCookie("box_flag", "true", "h1");
+            //     // 引导操作
+            //     const driver = new Driver({
+            //         padding: 100,    // Distance of element from around the edges 高亮与高亮节点的间距大小
+            //         closeBtnText: '我知道了', // Text on the close button for this step 关闭按钮的文字
+            //     })
+            //     driver.highlight({
+            //         element: '#slide_sec1',
+            //         popover: {
+            //             title: '点击查看包装详细信息',
+            //             position: 'bottom-right',
+            //         }
+            //     });
+            // }
         })
 
         // 监听图片加载完成
@@ -118,46 +118,46 @@
             }, 500)
         }
 
-        // 设置cookie
-        // 设定过期时间的使用示例：
-        // s20是代表20秒
-        // h是指小时，如12小时则是：h12
-        // d是天数，30天则：d30
-        function setCookie(name, value, time) {
-            let strsec = getsec(time);
-            console.log(strsec)
-            let exp = new Date();
-            exp.setTime(exp.getTime() + strsec * 1);
-            document.cookie = name + "=" + escape(value) + ";expires=" + exp.toGMTString();
-        }
-
-        // 设置过期时间
-        function getsec(str) {
-            let str1 = str.substring(1, str.length) * 1;
-            let str2 = str.substring(0, 1);
-            if (str2 === "s") {
-                return str1 * 1000;
-            } else if (str2 === "h") {
-                return str1 * 60 * 60 * 1000;
-            } else if (str2 === "d") {
-                return str1 * 24 * 60 * 60 * 1000;
-            }
-        }
-
-        // 读取cookie
-        function getCookie(cookieName) {
-            const strCookie = document.cookie;
-            const cookieList = strCookie.split(';');
-
-            for (let i = 0; i < cookieList.length; i++) {
-                const arr = cookieList[i].split('=');
-                if (cookieName === arr[0].trim()) {
-                    return arr[1];
-                }
-            }
-
-            return null;
-        }
+        // // 设置cookie
+        // // 设定过期时间的使用示例：
+        // // s20是代表20秒
+        // // h是指小时，如12小时则是：h12
+        // // d是天数，30天则：d30
+        // function setCookie(name, value, time) {
+        //     let strsec = getsec(time);
+        //     console.log(strsec)
+        //     let exp = new Date();
+        //     exp.setTime(exp.getTime() + strsec * 1);
+        //     document.cookie = name + "=" + escape(value) + ";expires=" + exp.toGMTString();
+        // }
+        //
+        // // 设置过期时间
+        // function getsec(str) {
+        //     let str1 = str.substring(1, str.length) * 1;
+        //     let str2 = str.substring(0, 1);
+        //     if (str2 === "s") {
+        //         return str1 * 1000;
+        //     } else if (str2 === "h") {
+        //         return str1 * 60 * 60 * 1000;
+        //     } else if (str2 === "d") {
+        //         return str1 * 24 * 60 * 60 * 1000;
+        //     }
+        // }
+        //
+        // // 读取cookie
+        // function getCookie(cookieName) {
+        //     const strCookie = document.cookie;
+        //     const cookieList = strCookie.split(';');
+        //
+        //     for (let i = 0; i < cookieList.length; i++) {
+        //         const arr = cookieList[i].split('=');
+        //         if (cookieName === arr[0].trim()) {
+        //             return arr[1];
+        //         }
+        //     }
+        //
+        //     return null;
+        // }
     </script>
 
 </head>
@@ -200,7 +200,7 @@
     let timer = null
 
     function box_click() {
-        clearTimeout(timer)
+        clearTimeout(timer);
         let curr_obj = window.event.currentTarget;
         // 当前展示的盒子id
         let img_id = parseInt($.getUrlParam("id"));
