--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             myInit();
             if (getCookie("index_flag") == null) {
                 // 引导操作
-                swal("欢迎进入远古的中国世界，扫描辅助图形揭开中国文化的神秘面纱", {
+                swal("Добро пожаловать в древний мир Китая, сканируйте вспомогательную графику, чтобы раскрыть тайны китайской культуры.", {
                     buttons: false,
                     className: "swal-overlay",
                 });
