删除无用文件

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         })
 
         function myInit() {
+            console.log("dd");
             let dis = Math.ceil((document.body.offsetWidth - window.innerWidth) / 2);
             $("#l-img").css("left", dis + "px");
             $("#r-img").css("right", dis + "px");
