修复组件错误

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 }
             })
 
+            // 网页初始化
             window.addEventListener("camera-init", (event) => {
                 var intervalBox = setInterval(function () {
                     if (document.body.offsetWidth > 1000) {
