--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         })
 
         function myInit() {
-            console.log("dd");
+            alert("dd");
             let dis = Math.ceil((document.body.offsetWidth - window.innerWidth) / 2);
             $("#l-img").css("left", dis + "px");
             $("#r-img").css("right", dis + "px");
